--- a/css/custom.css
+++ b/css/custom.css
@@ -1,6 +1,6 @@
 :root {
   /* Colours */
-  --primary-bg-color: #e8ebee; /* used */
+  --primary-bg-color: #feffed; /* used */
   --primary-font-color: #474d52; /* used */
 
   --secondary-bg-color: #5d656c; /* used */
@@ -49,7 +49,7 @@
   --headline-color-inverted: #f9fcfe;
   --bodytext-color: #575c61;
   --bodytext-color-inverted: #f9fcfe;
-  --cta-text-color: #bbc3ca;
+  --cta-text-color: #fefeff;
   --cta-text-color-inverted: #bbc3ca;
   --followup-text-color: #575c61;
   --followup-text-color-inverted: #bbc3ca;
@@ -58,20 +58,20 @@
   --form-submit-color-inverted: #bbc3ca;
 
   /* Background colors */
-  --logotype-background-color: #a9aaae;
-  --header-background-color: #cfd5e5;
-  --article-background-color: #dbdde3;
+  --logotype-background-color: #d989b5;
+  --header-background-color: #fff7ee;
+  --article-background-color: #f2bbd9;
   --news-background-color: #dbdde3;
-  --news-background-color-inverted: #eeebe9;
-  --info-background-color: #dbdde3;
-  --headline-bg-color: #dbdde3;
-  --headline-bg-color-alert: #dbdde3;
-  --headline-bg-color-inverted: #dbdde3;
+  --news-background-color-inverted: #fff7ee;
+  --info-background-color: #f2bbd9;
+  --headline-bg-color: #0d39bd;
+  --headline-bg-color-alert: #acd7f2;
+  --headline-bg-color-inverted: #c1e9eb;
   --bodytext-bg-color: #dbdde3;
   --bodytext-bg-color-inverted: #dbdde3;
   --cta-text-bg-color: #dbdde3;
   --cta-text-bg-color-inverted: #dbdde3;
-  --followup-text-bg-color: #e8ebee;
+  --followup-text-bg-color: #d0dcdd;
   --followup-text-bg-color-inverted: #dbdde3;
   --form-background-color: #c5c7ce;
   --form-text-color: #dbdde3;
@@ -81,6 +81,6 @@
   --form-submit-bg-color-inverted: #dbdde3;
 
   /* Info-boxes */
-  --info-bg-color-yellow: #d6d5ce;
-  --info-bg-color-green: #a6a6a0;
+  --info-bg-color-yellow: #feffed;
+  --info-bg-color-green: #eccba2;
 }
