--- a/css/custom.css
+++ b/css/custom.css
@@ -28,9 +28,9 @@
   /* From styletile */
 
   /* Fonts */
-  --logotype-font: "Roboto", sans-serif;
-  --headline-font: "Roboto", sans-serif;
-  --body-font: "Roboto", sans-serif;
+  --logotype-font: "Cooper Black", sans-serif;
+  --headline-font: "Cooper Black", sans-serif;
+  --body-font: "Instrument Sans", sans-serif;
   --link-font: "Calibri", sans-serif;
 
   /* Text sizes */
