--- a/css/infographic.css
+++ b/css/infographic.css
@@ -30,3 +30,20 @@
   padding: 0;
 }
 
+hide {
+  visibility: hidden;
+}
+
+.fadeIn {
+  animation: fadeIn 1.5s ease-in-out;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
