--- a/css/custom.css
+++ b/css/custom.css
@@ -62,7 +62,7 @@
   --header-background-color: #ae8fd9;
   --article-background-color: #f2bbd9;
   --news-background-color: #dbdde3;
-  --news-background-color-inverted: #d0dcdd;
+  --news-background-color-inverted: #D0DCDD;
   --info-background-color: #f2bbd9;
   --headline-bg-color: #0d39bd;
   --headline-bg-color-alert: #acd7f2;
