--- a/css/forms.css
+++ b/css/forms.css
@@ -29,4 +29,28 @@
   line-height: 1.3;
   margin: 0 0 1.2rem 0;
   padding: 0;
+  font-family: ;
+}
+
+#fyi {
+  font-style: italic;
+  font-size: smaller;
+}
+
+#sub {
+  display: flex;
+  justify-content: right;
+  padding: 1rem;
+}
+
+#submit {
+  padding: 0.4rem;
+  background-color: var(--logotype-background-color);
+  border-radius: var(--border-radius);
+  border-color: var(--border-radius);
+}
+
+#date {
+  padding-bottom: 5px;
+  margin: 0.3rem;
 }
